--- a/us-medical-insurance-costs.ipynb
+++ b/us-medical-insurance-costs.ipynb
@@ -13,19 +13,18 @@
    "source": [
     "In this project, a CSV file with medical insurance costs will be investigated using Python. The goal with this project will be to analyze various attributes within insurance.csv to learn more about the patient information in the file and gain insight into potential use cases for the dataset.\n",
     "Some of the analysis will be:\n",
-    "* Find out the average age of patients in the dataset **DONE**\n",
-    "* Analyze where a majority of individuals are from **DONE**\n",
-    "* Look at different costs between smokers and non-smokers **DONE**\n",
-    "* What the average age is for someone who has at least one child **DONE**\n",
-    "* Return the number of males vs females **DONE**\n",
-    "* Return the average cost of the patients **DONE**\n",
-    "* Analyze mean and standard deviation (on ages, for example) **DONE**\n",
-    "* Create a dictionary that contains all patient information **DONE**\n",
+    "* Find out the average age of patients in the dataset\n",
+    "* Analyze where a majority of individuals are from\n",
+    "* Look at different costs between smokers and non-smokers\n",
+    "* What the average age is for someone who has at least one child\n",
+    "* Return the number of males vs females\n",
+    "* Return the average cost of the patients\n",
+    "* Analyze mean and standard deviation (on ages, for example)\n",
+    "* Create a dictionary that contains all patient information\n",
     "\n",
     "Extra:\n",
     "* Make predictions about what features are the most influential for an individual's medical insurance charges\n",
-    "* Explore areas where data may include bias and how that would impact potential use cases (ex: BMI)\n",
-    "* Organize findings into dictionaries, lists or another datatype **DONE**"
+    "* Organize findings into dictionaries, lists or another datatype"
    ]
   },
   {
