--- a/us-medical-insurance-costs.ipynb
+++ b/us-medical-insurance-costs.ipynb
@@ -522,8 +522,8 @@
    ],
    "source": [
     "#Calculate the median of insurance cost:\n",
-    "def cal_median(Ages):\n",
-    "    charge = [float(i[0]) for i in Patient_info]\n",
+    "def cal_median(Charges):\n",
+    "    charge = [float(i[-1]) for i in Patient_info]\n",
     "    charges = sorted(charge)\n",
     "    n = len(charges)\n",
     "    m = n // 2\n",
